# dw_3.0

./: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml
.github/workflows/: branch_deployments.yml  deploy.yml
src/qmi_etl/: definitions.py
src/qmi_etl/datawarehouse_2/: .user.yml  dbt_project.yml  profiles.yml
src/qmi_etl/datawarehouse_2/macros/: date_utils.sql  extract_utils.sql  math_utils.sql  schema.yml  test_effective_end_date_null.sql  valid_email_format.sql
src/qmi_etl/datawarehouse_2/models/: sources.yml
src/qmi_etl/datawarehouse_2/models/base/: base_AR_journal.sql  base_addresses.sql  base_alum_adders.sql  base_alum_ingot.sql  base_ap_comment.sql  base_ap_journal.sql  base_codereader_scans.sql  base_comments.sql  base_cru_data.sql  base_customer.sql  base_customer_contacts.sql  base_customer_part_number.sql  base_customer_terms.sql  base_galvannealed_cost.sql  (+43 more)
src/qmi_etl/datawarehouse_2/seeds/: codereadr_usernames_seed.csv  inventory_status_seed.csv  schema.yml  seed_codereadr_devices.csv  seed_cru.csv  seed_daily_targets.csv  seed_galvanized_pricing.csv  seed_galvannealed_cost.csv  seed_gl_master.csv  seed_ingot_prices.csv  seed_sales_target.csv  seed_steel_coatings.csv  seed_steel_freight_adders.csv  seed_steel_gauge_adders.csv  seed_texarkana_gauge_adders.csv  seed_texarkana_width_adders.csv
src/qmi_etl/defs/: bq_io_manager.py  dbt_assets.py  env_config.py  sql_server_assets.py  sql_server_io_manager.py
tests/: test_bq_io_manager.py  test_dbt_assets.py  test_defs.py  test_sql_server_assets.py  test_sql_server_io_manager.py
(+68 files in other folders)
